# sogi_pll_control

./: .gitmodules  CMakeLists.txt  LoaderStart.bat  flashonly.jlink
Output/: Project.hex
inc/: button.h  buzzer.h  eeprom.h  mc_config.h  mc_pid.h  mc_spll.h  printf_io.h
src/: app_main.cpp  mc_pid.cpp  mc_spll.cpp  printf_io.c
